src/test/deca/codegen/invalid/decaObjet/fields/00pointerNull.deca
// Description:
// Test d'un déréférencement de pointeur sur un objet null
//
// Resultats:
//      Error: Null error
//
// Historique:
//    crée le 16/06/2022

class A {
    int x;
}
{
    A a = null;
    println(a.x);
}